--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "material-ui": "^0.20.0",
+    "material-ui-datetimepicker": "^1.0.7",
+    "moment": "^2.22.1",
     "react": "^16.3.2",
+    "react-datetime": "^2.14.0",
+    "react-datetime-picker": "^1.3.1",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
